fix follow connection from outside of subapp